@@ -6,18 +6,11 @@
 
 	<groupId>org.georchestra</groupId>
 	<artifactId>georchestra-plui-evolution</artifactId>
-	<version>1.10.0</version>
+	<version>2.0.0</version>
 	<packaging>pom</packaging>
 
 	<name>georchestra-plui-evolution</name>
 	<description>Plugin Georchestra Plui'Evolution</description>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.16</version>
-		<relativePath />
-	</parent>
 
 	<!-- Modules du projet -->
 	<modules>
@@ -29,35 +22,49 @@
 	<!-- Propriétés du projet -->
 	<properties>
 
+		<springframework.boot.version>3.5.10</springframework.boot.version>
+
 		<!-- dependencies version -->
-		<commons.io.version>2.6</commons.io.version>
-		<commons.lang.version>3.9</commons.lang.version>
-		<commons.collections.version>4.4</commons.collections.version>
+		<commons.io.version>2.21.0</commons.io.version>
+		<commons.lang.version>3.20.0</commons.lang.version>
+		<commons.collections.version>4.5.0</commons.collections.version>
 
-		<openapi.version>1.7.0</openapi.version>
-		<swagger.version>2.2.8</swagger.version>
-		<jackson.databind.nullable.version>0.2.6</jackson.databind.nullable.version>
-		<openapi.plugin.version>7.0.1</openapi.plugin.version>
+		<openapi.version>1.8.0</openapi.version>
+		<openapi-web.version>2.8.16</openapi-web.version>
+		<swagger.version>2.2.46</swagger.version>
+		<jackson.databind.nullable.version>0.2.10</jackson.databind.nullable.version>
+		<openapi.plugin.version>7.20.0</openapi.plugin.version>
 		<springfox.version>3.0.0</springfox.version>
+		<commons.logging.version>1.3.6</commons.logging.version>
 
-		<mapstruct.version>1.3.1.Final</mapstruct.version>
+		<mapstruct.version>1.6.3</mapstruct.version>
 		<lombok.version>1.18.26</lombok.version>
-		<minidev.version>2.3</minidev.version>
-		<json.version>20200518</json.version>
-		<jsoup.version>1.12.1</jsoup.version>
-		<itextpdf.version>5.5.13.1</itextpdf.version>
+
+		<httpclient.version>4.5.14</httpclient.version>
+		<httpclient5.version>5.4.2</httpclient5.version>
+		<hibernate.spatial.version>6.6.3.Final</hibernate.spatial.version>
+
+		<freemarker.version>2.3.34</freemarker.version>
+
+		<minidev.version>2.6.0</minidev.version>
+		<json.version>20251224</json.version>
+		<jsoup.version>1.22.1</jsoup.version>
+		<itextpdf.version>5.5.13.5</itextpdf.version>
 		<flyingsauver.version>9.1.19</flyingsauver.version>
 		<jtidy.version>r938</jtidy.version>
 		<geotools.version>30.2</geotools.version>
 		<redmine.java.api.version>4.0.0.rc2</redmine.java.api.version>
 
 		<activiti.version>7.1.0.M5</activiti.version>
-		<log4j.version>2.17.0</log4j.version>
+		<log4j.version>2.25.4</log4j.version>
 
 		<maven-replacer-plugin.version>1.4.1</maven-replacer-plugin.version>
-		<compiler.plugin.version>3.5.1</compiler.plugin.version>
-		<assemby.plugin.version>2.6</assemby.plugin.version>
-		<ant.plugin.version>3.0.0</ant.plugin.version>
+		<maven-surefire-plugin.version>3.5.5</maven-surefire-plugin.version>
+		<compiler.plugin.version>3.15.0</compiler.plugin.version>
+		<assemby.plugin.version>3.8.0</assemby.plugin.version>
+		<ant.plugin.version>3.2.0</ant.plugin.version>
+		<war.plugin.version>3.5.1</war.plugin.version>
+		<jar.plugin.version>3.5.0</jar.plugin.version>
 
 		<!-- java version -->
 		<java.source.version>17</java.source.version>
@@ -70,40 +77,87 @@
 		<!-- sonar properties -->
 		<sonar.projectKey>${env.SONAR_KEY}${project.artifactId}</sonar.projectKey>
 		<sonar.projectName>${project.artifactId}</sonar.projectName>
-		<sonar.exclusions>**/config/*.java,**/exception/**/*.java,**/test/*.java</sonar.exclusions>
-		<sonar.global.test.exclusions>**/*Test.java</sonar.global.test.exclusions>
-	</properties>
 
-	<distributionManagement>
-		<repository>
-			<id>open.nexus</id>
-			<url>${MVN_RELEASES}</url>
-		</repository>
-		<snapshotRepository>
-			<id>open.nexus</id>
-			<url>https://nexus.boost.open.global/repository/rennes-metropole-plui-evolution-mvn-snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
+		<jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
+		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+		<sonar.exclusions>**/*Test.java, **/test/**/*Factory.java, **/*.spec.ts</sonar.exclusions>
+		<sonar.test.exclusions>**/*Test.java, **/test/**/*Factory.java,
+			**/*.spec.ts</sonar.test.exclusions>
+		<sonar.coverage.exclusions>
+			**/*.ts,
+			**/*Entity.java,
+			**/*Controller.java,
+			**/*Mapper.java,
+			**/*Exception.java,
+			**/*Bean.java,
+			**/AbstractExportDocumentApi.java,
+			**/ApiExceptionHandler.java,
+			**/ApiServiceExceptionsStatus.java,
+			**/org/georchestra/pluievolution/core/aop/**.java,
+			**/org/georchestra/pluievolution/service/bean/**.java,
+			**/org/georchestra/pluievolution/service/service/st/generator/**.java,
+		</sonar.coverage.exclusions>
+		<sonar.cpd.exclusions>
+			**/*Entity.java,
+			**/*.html,
+			**/*.*ss,
+			**/org/georchestra/pluievolution/service/bean/**.java
+		</sonar.cpd.exclusions>
+
+	</properties>
 
 	<repositories>
 		<repository>
 			<id>osgeo</id>
 			<name>OSGeo Release Repository</name>
 			<url>https://repo.osgeo.org/repository/release/</url>
-			<snapshots><enabled>false</enabled></snapshots>
-			<releases><enabled>true</enabled></releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>osgeo-snapshot</id>
 			<name>OSGeo Snapshot Repository</name>
 			<url>https://repo.osgeo.org/repository/snapshot/</url>
-			<snapshots><enabled>true</enabled></snapshots>
-			<releases><enabled>false</enabled></releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 		</repository>
 	</repositories>
 
 	<dependencyManagement>
 		<dependencies>
+
+			<!-- Spring Boot -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${springframework.boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-logging</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-jpa</artifactId>
+				<version>${springframework.boot.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-validation</artifactId>
+				<version>${springframework.boot.version}</version>
+			</dependency>
 
 			<!-- Modules -->
 			<dependency>
@@ -161,6 +215,12 @@
 				<version>${commons.io.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>${commons.logging.version}</version>
+			</dependency>
+
 			<!--
 			https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
 			<dependency>
@@ -199,6 +259,24 @@
 			</dependency>
 
 
+			<dependency>
+				<groupId>org.apache.httpcomponents.client5</groupId>
+				<artifactId>httpclient5</artifactId>
+				<version>${httpclient5.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${httpclient.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hibernate.orm</groupId>
+				<artifactId>hibernate-spatial</artifactId>
+				<version>${hibernate.spatial.version}</version>
+			</dependency>
+
 			<!-- OpenApi dependencies -->
 
 			<dependency>
@@ -211,6 +289,12 @@
 				<groupId>io.swagger.core.v3</groupId>
 				<artifactId>swagger-models</artifactId>
 				<version>${swagger.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+				<version>${openapi-web.version}</version>
 			</dependency>
 
 			<dependency>
@@ -228,6 +312,12 @@
 			<dependency>
 				<groupId>io.springfox</groupId>
 				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-boot-starter</artifactId>
 				<version>${springfox.version}</version>
 			</dependency>
 
@@ -281,13 +371,7 @@
 				<artifactId>jtidy</artifactId>
 				<version>${jtidy.version}</version>
 			</dependency>
-
-			<dependency>
-				<groupId>org.geotools</groupId>
-				<artifactId>geotools</artifactId>
-				<version>${geotools.version}</version>
-			</dependency>
-
+			<!-- GeoTools dependencies -->
 			<dependency>
 				<groupId>org.geotools</groupId>
 				<artifactId>geotools</artifactId>
@@ -305,12 +389,12 @@
 				<artifactId>gt-geometry</artifactId>
 				<version>${geotools.version}</version>
 			</dependency>
-			
+
 			<dependency>
-			<groupId>org.geotools</groupId>
-			<artifactId>gt-referencing</artifactId>
-			<version>${geotools.version}</version>
-		</dependency>
+				<groupId>org.geotools</groupId>
+				<artifactId>gt-referencing</artifactId>
+				<version>${geotools.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.geotools</groupId>
@@ -346,6 +430,12 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>${springframework.boot.version}</version>
+				</plugin>
 
 				<!-- Swagger -->
 				<plugin>
@@ -394,15 +484,63 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
+					<version>${war.plugin.version}</version>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
+					<version>${jar.plugin.version}</version>
 				</plugin>
+
+				<!-- tests unitaires -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<argLine>-Dfile.encoding=UTF-8 --add-opens
+							java.base/java.util=ALL-UNNAMED</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco-maven-plugin.version}</version>
+				</plugin>
+
 
 			</plugins>
 		</pluginManagement>
+
+		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>@{argLine}</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
